fixed offcenter delay text

--- a/cardeditor.css
+++ b/cardeditor.css
@@ -253,8 +253,8 @@ input[type="file"] {
 	position: absolute;
 	transform: translate(-50%, -50%);
 	font-size: 4em;
-	left: 90%;
-	top: 42%;
+	left: 95.5%;
+	top: 43%;
 }
 .description-text {
 	position: absolute;
